--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@ communities:
 
 <p>
 
-<p>[Summary: <b>1490</b> (total) / <b>989</b> (fixed)]<br>
-<p>[Z3 bugs: <b>1079</b> (total) / <b>709</b> (fixed)]<br>
+<p>[Summary: <b>1500</b> (total) / <b>989</b> (fixed)]<br>
+<p>[Z3 bugs: <b>1089</b> (total) / <b>709</b> (fixed)]<br>
 [CVC4 bugs: <b>411</b> (total) / <b>280</b> (fixed)]<br>
-<p>[Bugs in default mode (Z3): <b>658</b> (total) / <b>449</b> (fixed)]<br>
+<p>[Bugs in default mode (Z3): <b>659</b> (total) / <b>449</b> (fixed)]<br>
 [Bugs in default mode (CVC4): <b>203</b> (total) / <b>145</b> (fixed)]<br>
-<p>[Soundness bugs (Z3): <b>346</b> (total) / <b>206</b> (fixed)]<br>
-[Soundness bugs (CVC4): <b>70</b> (total) / <b>57</b> (fixed)]<br>
+<p>[Soundness bugs (Z3): <b>355</b> (total) / <b>206</b> (fixed)]<br>
+[Soundness bugs (CVC4): <b>70</b> (total) / <b>57</b> (fixed)]<br
 
 <p>
 Semantic Fusion (<a href="yinyang_bugs.html">report links</a>) <br>
