--- a/typefuzz_bugs.html
+++ b/typefuzz_bugs.html
@@ -1,4 +1,4 @@
-<h2>Bug findings with Generative Type-aware Mutation</h2>
+<h2>Bug findings with Type-aware mutation</h2>
 
 <h2>========= CVC4 =========</h2>
 <h2>Soundness Bugs</h2>
@@ -70,6 +70,14 @@
 <h2>Soundness Bugs</h2>
 <h4>Refutation Soundness</h4>
 <a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-873588682">https://github.com/Z3Prover/z3/issues/5140#issuecomment-873588682</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-880092673">https://github.com/Z3Prover/z3/issues/2650#issuecomment-880092673</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-854891402">https://github.com/Z3Prover/z3/issues/2650#issuecomment-854891402</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-852910615">https://github.com/Z3Prover/z3/issues/2650#issuecomment-852910615</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-852088518">https://github.com/Z3Prover/z3/issues/2650#issuecomment-852088518</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-851051592">https://github.com/Z3Prover/z3/issues/2650#issuecomment-851051592</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-830862350">https://github.com/Z3Prover/z3/issues/2650#issuecomment-830862350</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-829061143">https://github.com/Z3Prover/z3/issues/2650#issuecomment-829061143</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-873588682">https://github.com/Z3Prover/z3/issues/5140#issuecomment-873588682</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-868855897">https://github.com/Z3Prover/z3/issues/5140#issuecomment-868855897</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-880092673">https://github.com/Z3Prover/z3/issues/2650#issuecomment-880092673</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/5301">https://github.com/Z3Prover/z3/issues/5301</a> Confirmed <br />
@@ -104,6 +112,8 @@
 <a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-767074891">https://github.com/Z3Prover/z3/issues/4940#issuecomment-767074891</a> Fixed <br />
 
 <h4>Solution Soundness</h4>
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-860191020">https://github.com/Z3Prover/z3/issues/2650#issuecomment-860191020</a> Reported <br />
+<a href="https://github.com/Z3Prover/z3/issues/2650#issuecomment-832190983">https://github.com/Z3Prover/z3/issues/2650#issuecomment-832190983</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-868853515">https://github.com/Z3Prover/z3/issues/5140#issuecomment-868853515</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/5140#issuecomment-863925613">https://github.com/Z3Prover/z3/issues/5140#issuecomment-863925613</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/5324#issuecomment-852984716">https://github.com/Z3Prover/z3/issues/5324#issuecomment-852984716</a> Fixed <br />
