--- a/typefuzz_bugs.html
+++ b/typefuzz_bugs.html
@@ -1,4 +1,4 @@
-<h2>Bug findings with Type-aware mutation</h2>
+<h2>Bug findings with Generative type-aware mutation</h2>
 
 <h2>========= CVC4 =========</h2>
 <h2>Soundness Bugs</h2>
