--- a/index.html
+++ b/index.html
@@ -50,18 +50,16 @@ We have maintained our continuous, extensive effort in stress-testing
 Z3 and CVC4 to benefit the SMT solver developer, user, and research
 communities:
 
-<p>
-
-<p>[Summary: <b>1,500</b> (total) / <b>989</b> (fixed)]<br>
-<p>[Z3 bugs: <b>1,089</b> (total) / <b>709</b> (fixed)]<br>
-[CVC4 bugs: <b>411</b> (total) / <b>280</b> (fixed)]<br>
-<p>[Bugs in default mode (Z3): <b>659</b> (total) / <b>449</b> (fixed)]<br>
-[Bugs in default mode (CVC4): <b>203</b> (total) / <b>145</b> (fixed)]<br>
-<p>[Soundness bugs (Z3): <b>355</b> (total) / <b>206</b> (fixed)]<br>
-[Soundness bugs (CVC4): <b>70</b> (total) / <b>57</b> (fixed)]<br
 
 <p>
-<br>
+[Summary: <b>1,560</b> (total) / <b>1,061</b> (fixed)]<br><br>
+[Z3 bugs: <b>1,147</b> (total) / <b>779</b> (fixed)]<br>
+[CVC4 bugs: <b>413</b> (total) / <b>282</b> (fixed)]<br><br>
+[Bugs in default mode (Z3): <b>680</b> (total) / <b>479</b> (fixed)]<br>
+[Bugs in default mode (CVC4): <b>204</b> (total) / <b>147</b> (fixed)]<br><br>
+[Soundness bugs (Z3): <b>375</b> (total) / <b>228</b> (fixed)]<br>
+[Soundness bugs (CVC4): <b>71</b> (total) / <b>60</b> (fixed)]<br>
+</p>
 Semantic Fusion (<a href="yinyang_bugs.html">report links</a>) <br>
 Type-aware Operator Mutation (<a href="opfuzz_bugs.html">report links</a>) <br>
 Generative Type-aware Mutation (<a href="typefuzz_bugs.html">report links</a>)
@@ -70,7 +68,7 @@ Generative Type-aware Mutation (<a href="typefuzz_bugs.html">report links</a>)
 <p><img class="" src="./img/tool_logo.png" alt="" width="25pt" style="margin-bottom:-8px; margin-right:5px"/> <b>yinyang Tool</b>: <a href="https://github.com/testsmt/yinyang">https://github.com/testsmt/yinyang</a></p>
 
 Please follow us on
-Twitter <a href="https://twitter.com/testsmtsolvers">@testsmt</a> for
+Twitter <a href="https://twitter.com/testsmtsolvers">@testsmtsolvers</a> for
 important project developments and regular tweets about interesting
 bugs in Z3 and CVC4.
 
@@ -106,9 +104,9 @@ In <a href="https://2020.splashcon.org/"><I>Proceedings of SPLASH/OOPSLA 2020</I
 <div style="font-size:10pt;margin-bottom:-10pt"><sup>*</sup> Both authors contributed equally to this work. </div>
 </br>
 </br>
- [3] <a href=""><B>Generative Type-Aware Mutation for Testing SMT Solvers.</B></a><br /> 
+ [3] <a href="https://wintered.github.io/papers/park-etal-oopsla21.pdf"><B>Generative Type-Aware Mutation for Testing SMT Solvers.</B></a><br /> 
 Jiwon Park, Dominik Winterer, Chengyu Zhang and Zhendong Su</br>
-In <a href="https://2021.splashcon.org/"><I>Proceedings of SPLASH/OOPSLA 2021</I></a>, Chicago, USA, October 2021 (conditionally accepted).</br>
+In <a href="https://2021.splashcon.org/track/splash-2021-oopsla"><I>Proceedings of SPLASH/OOPSLA 2021</I></a>, October 2021 </br>
 
 
 </font>
@@ -117,6 +115,6 @@ In <a href="https://2021.splashcon.org/"><I>Proceedings of SPLASH/OOPSLA 2021</I
 
 <br><br><br><br>
 
-<tt>last modified: 2021.07.15</tt>
+<tt>last modified: 2021.10.29</tt>
 </body>
 </html>
