--- a/index.html
+++ b/index.html
@@ -104,17 +104,26 @@ In <a href="https://2020.splashcon.org/"><I>Proceedings of SPLASH/OOPSLA 2020</I
 <div style="font-size:10pt;margin-bottom:-10pt"><sup>*</sup> Both authors contributed equally to this work. </div>
 </br>
 </br>
- [3] <a href="https://wintered.github.io/papers/park-etal-oopsla21.pdf"><B>Generative Type-Aware Mutation for Testing SMT Solvers.</B></a><br /> 
-Jiwon Park, Dominik Winterer, Chengyu Zhang and Zhendong Su</br>
+ [3] <a href="https://wintered.github.io/papers/park-etal-oopsla21.pdf"><B>Generative Type-Aware Mutation for Testing SMT Solvers.</B></a>
+[<a href="https://testsmt.github.io/slides/oopsla21-generative-type-aware-mutation.pdf">slides</a> | 
+  <a href="https://www.youtube.com/watch?v=Jxc4N4mrm8o&t=2s&ab_channel=ACMSIGPLAN">talk video</a>] <br>
+Jiwon Park<sup>*</sup>, Dominik Winterer<sup>*</sup>, Chengyu Zhang and Zhendong Su</br>
 In <a href="https://2021.splashcon.org/track/splash-2021-oopsla"><I>Proceedings of SPLASH/OOPSLA 2021</I></a>, October 2021 </br>
+<div style="font-size:10pt;margin-bottom:-10pt "><sup>*</sup>
+ Both authors contributed equally to this work.
+</div>
+<br> 
 
 
+
+<h3>Acknowledgments</h3>
+This project is partially supported by an Amazon Research Award (Fall '21). 
+We are also grateful to Google for an open source peers bonus. 
 </font>
 
-</font>
 
 <br><br><br><br>
 
-<tt>last modified: 2021.10.29</tt>
+<tt>last modified: 2022.09.15</tt>
 </body>
 </html>
