--- a/janus.html
+++ b/janus.html
@@ -1,3 +1,7 @@
+---
+sidebar:
+  nav: "backnav"
+---
 <h2>Incompleteness bug findings with Weakening & Strengthening </h2>
 <a href="https://github.com/Z3Prover/z3/issues/5491">https://github.com/Z3Prover/z3/issues/5491</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5398">https://github.com/Z3Prover/z3/issues/5398</a> Fixed <br />
