--- a/typefuzz_bugs.html
+++ b/typefuzz_bugs.html
@@ -1,6 +1,10 @@
+---
+sidebar:
+  nav: "typefuzznav"
+---
 <h2>Bug findings with Type-aware mutation</h2>
-<h2>========= CVC4 =========</h2>
-<h2>Soundness Bugs</h2>
+<h2 id="cvc4">========= CVC4 =========</h2>
+<h2 id="cvc4sound">Soundness Bugs</h2>
 <h4>Refutation Soundness</h4>
 <a href="https://github.com/cvc5/cvc5/issues/6776">https://github.com/cvc5/cvc5/issues/6776</a> Fixed <br />
 <a href="https://github.com/cvc5/cvc5/issues/6681">https://github.com/cvc5/cvc5/issues/6681</a> Fixed <br />
@@ -29,7 +33,7 @@
 <a href="https://github.com/CVC4/CVC4/issues/6101">https://github.com/CVC4/CVC4/issues/6101</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/6075">https://github.com/CVC4/CVC4/issues/6075</a> Fixed <br />
 <a href="[CVC4/CVC4#5915](https://github.com/CVC4/CVC4/issues/5915)">[CVC4/CVC4#5915](https://github.com/CVC4/CVC4/issues/5915)</a> Fixed <br />
-<h2>Others</h2>
+<h2 id="cvc4others">Others</h2>
 <a href="https://github.com/cvc5/cvc5/issues/7252#issue-1006824288">https://github.com/cvc5/cvc5/issues/7252#issue-1006824288</a> Confirmed <br />
 <a href="https://github.com/cvc5/cvc5/issues/6973">https://github.com/cvc5/cvc5/issues/6973</a> Confirmed <br />
 <a href="https://github.com/cvc5/cvc5/issues/6653#issuecomment-857073800">https://github.com/cvc5/cvc5/issues/6653#issuecomment-857073800</a> Confirmed <br />
@@ -66,8 +70,8 @@
 <a href="https://github.com/CVC4/CVC4/issues/5816">https://github.com/CVC4/CVC4/issues/5816</a> Fixed <br />
 <a href="https://github.com/CVC4/CVC4/issues/5815">https://github.com/CVC4/CVC4/issues/5815</a> Confirmed <br />
 
-<h2>========= Z3 =========</h2>
-<h2>Soundness Bugs</h2>
+<h2 id="z3">========= Z3 =========</h2>
+<h2 id="z3sound">Soundness Bugs</h2>
 <h4>Refutation Soundness</h4>
 <a href="https://github.com/Z3Prover/z3/issues/5429#issuecomment-885793775">https://github.com/Z3Prover/z3/issues/5429#issuecomment-885793775</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5429#issuecomment-885778234">https://github.com/Z3Prover/z3/issues/5429#issuecomment-885778234</a> Fixed <br />
@@ -137,7 +141,7 @@
 <a href="https://github.com/Z3Prover/z3/issues/5324#issuecomment-852095144">https://github.com/Z3Prover/z3/issues/5324#issuecomment-852095144</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5096">https://github.com/Z3Prover/z3/issues/5096</a> Fixed <br />
 <a href="[Z3Prover/Z3#5074](https://github.com/Z3Prover/z3/issues/5074)">[Z3Prover/Z3#5074](https://github.com/Z3Prover/z3/issues/5074)</a> Fixed <br />
-<h2>Others</h2>
+<h2 id="z3others">Others</h2>
 <a href="https://github.com/Z3Prover/z3/issues/5467#issuecomment-917397337">https://github.com/Z3Prover/z3/issues/5467#issuecomment-917397337</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/5467#issuecomment-917381062">https://github.com/Z3Prover/z3/issues/5467#issuecomment-917381062</a> Reported <br />
 <a href="https://github.com/Z3Prover/z3/issues/5532#issuecomment-915380467">https://github.com/Z3Prover/z3/issues/5532#issuecomment-915380467</a> Fixed <br />
