change the font size

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ sidebar:
 </head>
 
 
-<body onload="load()">
+<body onload="load()" style="font-size: 20px;">
 <!-- <link type="text/css" rel="stylesheet" href="style.css"> -->
 
 <!-- <font face="ariel,helvetica"> -->
 
 <br><br>
 
-<center><img class="" src="/img/tool_logo.png" alt="" width="300pt"/></center>
+<center><img class="" src="/img/tool_logo.png" alt="" width="230pt"/></center>
 
 <br><br>
 
@@ -57,7 +57,7 @@ We have maintained our continuous, extensive effort in stress-testing
 Z3 and CVC4/5 to benefit the SMT solver developer, user, and research
 communities:
 <br><br>
-<center><div style="font-size: 25px;"><b>Yin-Yang project has found <b><span id="totalnum">1677</span></b> (total) / <b><span id='fixednum'>1,244</span></b> (fixed) bugs.</b></div></center>
+<center><div style="font-size: 23px;"><b>Yin-Yang project has found <b><span id="totalnum">&nbsp;&nbsp;</span></b> (total) / <b><span id='fixednum'>&nbsp;&nbsp;</span></b> (fixed) bugs.</b></div></center>
 <br>
 <p>[Z3 bugs: <b>1199</b> (total) / <b>889</b> (fixed)]<br>
 [CVC4/5 bugs: <b>465</b> (total) / <b>354</b> (fixed)]<br>
@@ -140,7 +140,7 @@ In <a href="https://conf.researchr.org/home/ase-2022"><I>Proceedings of ASE 2022
   <a href="https://wintered.github.io/"><img src="/img/dominik.png" itemprop="image"></a>
 </div>
 <div class="author__content">
-  <h3 class="author__name" itemprop="name"><a href="https://wintered.github.io/">Dominik Winterer</a></h3>
+  <h3 class="author__name" itemprop="name"><a href="https://wintered.github.io/">Dominik <br> Winterer</a></h3>
 </div>
 </div>
 
@@ -149,7 +149,7 @@ In <a href="https://conf.researchr.org/home/ase-2022"><I>Proceedings of ASE 2022
   <a href="http://chengyuzhang.com"><img src="/img/chengyu.jpg" itemprop="image"></a>
 </div>
 <div class="author__content">
-  <h3 class="author__name" itemprop="name"><a href="http://chengyuzhang.com">Chengyu Zhang</a></h3>
+  <h3 class="author__name" itemprop="name"><a href="http://chengyuzhang.com">Chengyu <br> Zhang</a></h3>
 </div>
 </div>
 
@@ -167,7 +167,7 @@ In <a href="https://conf.researchr.org/home/ase-2022"><I>Proceedings of ASE 2022
   <a href="https://maurobringolf.ch/"><img src="/img/Mauro.jpg" itemprop="image"></a>
 </div>
 <div class="author__content">
-  <h3 class="author__name" itemprop="name"><a href="https://maurobringolf.ch/">Mauro Bringolf</a></h3>
+  <h3 class="author__name" itemprop="name"><a href="https://maurobringolf.ch/">Mauro <br> Bringolf</a></h3>
 </div>
 </div>
 
