--- a/janus.html
+++ b/janus.html
@@ -2,6 +2,7 @@
 sidebar:
   nav: "backnav"
 ---
+<body style="font-size: 20px;">
 <h2>Incompleteness bug findings with Weakening & Strengthening </h2>
 <a href="https://github.com/Z3Prover/z3/issues/5491">https://github.com/Z3Prover/z3/issues/5491</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5398">https://github.com/Z3Prover/z3/issues/5398</a> Fixed <br />
@@ -34,3 +35,5 @@ sidebar:
 <a href="https://github.com/cvc5/cvc5/issues/6798">https://github.com/cvc5/cvc5/issues/6798</a> Confirmed <br />
 <a href="https://github.com/cvc5/cvc5/issues/6274">https://github.com/cvc5/cvc5/issues/6274</a> Confirmed <br />
 <a href="https://github.com/cvc5/cvc5/issues/6717">https://github.com/cvc5/cvc5/issues/6717</a> Fixed <br />
+</body>
+<style>#footer {display: none} </style>
