--- a/opfuzz_bugs.html
+++ b/opfuzz_bugs.html
@@ -2,6 +2,7 @@
 sidebar:
   nav: "opfuzznav"
 ---
+<body style="font-size: 20px;">
 <h2>Bug findings with Type-aware Operator mutation</h2>
 <h2 id="cvc4">========= CVC4 =========</h2>
 <h2 id="cvc4sound">Soundness Bugs</h2>
@@ -1264,3 +1265,5 @@ sidebar:
 <a href="https://github.com/Z3Prover/z3/issues/2586">https://github.com/Z3Prover/z3/issues/2586</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2585">https://github.com/Z3Prover/z3/issues/2585</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2581">https://github.com/Z3Prover/z3/issues/2581</a> Fixed <br />
+</body>
+<style>#footer {display: none} </style>
