--- a/typefuzz_bugs.html
+++ b/typefuzz_bugs.html
@@ -2,6 +2,7 @@
 sidebar:
   nav: "typefuzznav"
 ---
+<body style="font-size: 20px;">
 <h2>Bug findings with Type-aware mutation</h2>
 <h2 id="cvc4">========= CVC4 =========</h2>
 <h2 id="cvc4sound">Soundness Bugs</h2>
@@ -249,3 +250,6 @@ sidebar:
 <a href="https://github.com/Z3Prover/z3/issues/5047">https://github.com/Z3Prover/z3/issues/5047</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/5035">https://github.com/Z3Prover/z3/issues/5035</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/4940#issuecomment-767075970">https://github.com/Z3Prover/z3/issues/4940#issuecomment-767075970</a> Fixed <br />
+</body>
+
+<style>#footer {display: none} </style>
