--- a/yinyang_bugs.html
+++ b/yinyang_bugs.html
@@ -2,6 +2,7 @@
 sidebar:
   nav: "yinyangnav"
 ---
+<body style="font-size: 20px;">
 <h2>Bug findings with Semantic Fusion</h2>
 
 <h2 id="cvc4">========= CVC4 =========</h2>
@@ -83,4 +84,5 @@ sidebar:
 <a href="https://github.com/Z3Prover/z3/issues/2375">https://github.com/Z3Prover/z3/issues/2375</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2372">https://github.com/Z3Prover/z3/issues/2372</a> Fixed <br />
 <a href="https://github.com/Z3Prover/z3/issues/2366">https://github.com/Z3Prover/z3/issues/2366</a> Fixed <br />
-
+</body>
+<style>#footer {display: none} </style>
